# rss-cli

./: .gitignore  AGENTS.md  README.md  feeds.csv  literature-rss-plan.md  pyproject.toml
src/rss_cli/: __init__.py  __main__.py  cli.py  parser.py
tests/: test_parser.py
